# whodunit

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/plans/: 2026-06-08-engine-isolation-core.md  2026-06-08-gamegraph-skeleton.md  2026-06-08-ts-engine.md  2026-06-09-eval-harness.md  2026-06-09-llm-integration.md  2026-06-11-leak-detector.md  2026-06-12-dm-speaker.md
docs/specs/: 2026-06-05-whodunit-design.md  2026-06-08-gamegraph-skeleton-design.md  2026-06-08-whodunit-prd.md  2026-06-09-eval-harness-design.md  2026-06-09-llm-integration-design.md  2026-06-11-leak-detector-design.md  2026-06-12-dm-speaker-design.md  2026-06-12-scenario-shenyuan-design.md
engine/: context.py  models.py  release.py  scenario.py  tally.py  test_context.py  test_release.py  test_tally.py  test_visibility.py  visibility.py
spike/: README.md  game.py  llm.py  scenario.py  test_guards.py  test_visibility.py  visibility.py
spike/transcripts/: run-20260605-160856.txt  run-20260605-164059.txt  run-20260605-201006.txt
src/: play.ts  transcript.test.ts  transcript.ts
src/engine/: ai-participant.test.ts  ai-participant.ts  context.test.ts  context.ts  dm.test.ts  dm.ts  graph.test.ts  graph.ts  leak.test.ts  leak.ts  llm.test.ts  llm.ts  models.ts  participant.test.ts  participant.ts  release.test.ts  release.ts  scenario-shenyuan.test.ts  scenario-shenyuan.ts  scenario.ts  scenarios.test.ts  scenarios.ts  tally.test.ts  tally.ts  (+2 more)
(+4 files in other folders)
