[project]
name = "whodunit"
version = "0.1.0"
description = "AI 剧本杀（多智能体）—— 用架构约束全知模型、演好信息受限的角色"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["engine"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120  # 中文注释/剧本文本信息密度高，100 易触发；120 是常见且合理的上限
target-version = "py312"
exclude = ["spike", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# 保留每文件的 `# -*- coding: utf-8 -*-` 头（本仓库一致的风格，Py3 下虽冗余但无害）
ignore = ["UP009"]
